--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,20 @@
 {
   "name": "uqlibrary-fbs-filter-form",
-  "version": "0.0.0",
-  "keywords": [
-    "seed",
-    "polymer",
-    "web-components"
-  ],
+  "description": "Aggregate of elements created by the Library",
   "main": "uqlibrary-fbs-filter-form.html",
+  "license": "MIT",
+  "private": true,
+  "homepage": "https://github.com/uqlibrary/uqlibrary-fbs-filter-form/",
+  "ignore": [
+    "/.*",
+    "/tests/"
+  ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.4.0",
-    "paper-elements": "Polymer/paper-elements#^0.4.0",
+    "polymer": "Polymer/polymer#^0.4.2",
+    "paper-elements": "Polymer/paper-elements#^0.4.2",
     "md-timepicker": "virtual-dev/md-timepicker"
   },
   "devDependencies": {
-    "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
+    "polymer-test-tools": "Polymer/web-component-tester#^0.7.3"
   }
 }
