--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^0.5.0",
-    "paper-elements": "Polymer/paper-elements#^0.5.0",
-    "md-timepicker": "virtual-dev/md-timepicker"
+    "paper-elements": "Polymer/paper-elements#^0.5.0"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/web-component-tester#^0.7.3"
