--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,16 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^0.5.0",
-    "paper-elements": "Polymer/paper-elements#^0.5.0"
+    "core-menu": "Polymer/core-menu#0.5.0",
+    "core-icon": "Polymer/core-icon#0.5.0",
+    "core-icons": "Polymer/core-icons#0.5.0",
+    "paper-item": "Polymer/paper-item#0.5.0",
+    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#0.5.0",
+    "paper-input": "Polymer/paper-input#0.5.0",
+    "paper-slider": "Polymer/paper-slider#0.5.0",
+    "paper-checkbox": "Polymer/paper-checkbox#0.5.0",
+    "paper-fab": "Polymer/paper-fab#0.5.0",
+    "paper-toast": "Polymer/paper-toast#0.5.0"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/web-component-tester#^0.7.3"
