--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "paper-slider": "Polymer/paper-slider#0.5.0",
     "paper-checkbox": "Polymer/paper-checkbox#0.5.0",
     "paper-fab": "Polymer/paper-fab#0.5.0",
-    "paper-toast": "Polymer/paper-toast#0.5.0"
+    "paper-toast": "Polymer/paper-toast#0.5.0",
+    "md-timepicker" : "uqlibrary/md-timepicker#master"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/web-component-tester#^0.7.3"
