--- a/bower.json
+++ b/bower.json
@@ -10,20 +10,20 @@
     "/tests/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.5.0",
-    "core-menu": "Polymer/core-menu#0.5.0",
-    "core-icon": "Polymer/core-icon#0.5.0",
-    "core-icons": "Polymer/core-icons#0.5.0",
-    "paper-item": "Polymer/paper-item#0.5.0",
-    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#0.5.0",
-    "paper-input": "Polymer/paper-input#0.5.0",
-    "paper-slider": "Polymer/paper-slider#0.5.0",
-    "paper-checkbox": "Polymer/paper-checkbox#0.5.0",
-    "paper-fab": "Polymer/paper-fab#0.5.0",
-    "paper-toast": "Polymer/paper-toast#0.5.0",
-    "md-timepicker" : "uqlibrary/md-timepicker#master"
+    "polymer": "Polymer/polymer#^0.5.1",
+    "core-menu": "Polymer/core-menu#0.5.1",
+    "core-icon": "Polymer/core-icon#0.5.1",
+    "core-icons": "Polymer/core-icons#0.5.1",
+    "paper-item": "Polymer/paper-item#0.5.1",
+    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#0.5.1",
+    "paper-input": "Polymer/paper-input#0.5.1",
+    "paper-slider": "Polymer/paper-slider#0.5.1",
+    "paper-checkbox": "Polymer/paper-checkbox#0.5.1",
+    "paper-fab": "Polymer/paper-fab#0.5.1",
+    "paper-toast": "Polymer/paper-toast#0.5.1",
+    "md-timepicker" : "uqlibrary/md-timepicker#0.5.1"
   },
   "devDependencies": {
-    "polymer-test-tools": "Polymer/web-component-tester#^0.7.3"
+    "polymer-test-tools": "Polymer/web-component-tester#1.6.1"
   }
 }
