--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "paper-checkbox": "Polymer/paper-checkbox#0.5.1",
     "paper-fab": "Polymer/paper-fab#0.5.1",
     "paper-toast": "Polymer/paper-toast#0.5.1",
-    "md-timepicker" : "uqlibrary/md-timepicker#0.5.1"
+    "md-timepicker" : "uqlibrary/md-timepicker#master"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/web-component-tester#1.6.1"
