--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "paper-checkbox": "Polymer/paper-checkbox#0.5.1",
     "paper-fab": "Polymer/paper-fab#0.5.1",
     "paper-toast": "Polymer/paper-toast#0.5.1",
+    "paper-dialog": "Polymer/paper-dialog#0.5.1",
     "md-timepicker" : "uqlibrary/md-timepicker#master"
   },
   "devDependencies": {
